[package]
name = "ob-server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "ob_server"

[dependencies]
axum = "0.7.5"
config = { version = "0.14.0", default-features = false, features = ["async", "toml", "convert-case"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
